# rusty_train

./: .gitignore  18xx_introduction.html  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  draw-dependency-graph.sh  img-diff.sh  motivation.html  print.html  searchindex.js  searchindex.json
.github/workflows/: gh-pages.yml
book/: book.toml  build.sh  draw-dependency-graph.sh
book/src/: 18xx_introduction.md  SUMMARY.md  about.md  motivation.md  problem.md
book/src/dev_guide/: about.md  crates.md  determinism.md  features.md  index.md  overview.md  performance.md  profiling.md  routes.md  rusty_train.md  testing.md  tokens.md
book/src/todo/: documentation.md  features.md  implementation.md  index.md  miscellaneous.md  rust.md
book/src/user_guide/: default.md  example.md  global.md  index.md  modal.md  routes.md  tile.md  tokens.md
crates/n18brush/: Cargo.toml
crates/n18brush/src/: lib.rs
crates/n18catalogue/: Cargo.toml
crates/n18catalogue/src/: lib.rs  tests.rs  tiles.rs
crates/n18catalogue/src/tests/: connectivity.rs
crates/n18example/: Cargo.toml
crates/n18example/src/: lib.rs
crates/n18game/: Cargo.toml
crates/n18game/src/: _1830.rs  _1861.rs  _1867.rs  _1889.rs  lib.rs
crates/n18game/src/_1830/: locns.rs  tiles.rs
crates/n18game/src/_1889/: locns.rs  tiles.rs
crates/n18hex/: Cargo.toml
crates/n18hex/src/: coord.rs  hex.rs  lib.rs  theme.rs
crates/n18io/: Cargo.toml
crates/n18io/src/: lib.rs  routes.rs
crates/n18map/: Cargo.toml
crates/n18map/src/: address.rs  descr.rs  lib.rs  map.rs
crates/n18route/: Cargo.toml
crates/n18route/src/: bonus.rs  builder.rs  comb.rs  conflict.rs  doc.rs  lib.rs  path.rs  perm.rs  search.rs  train.rs
crates/n18tile/: Cargo.toml
crates/n18tile/examples/: custom_tile.rs
crates/n18tile/src/: city.rs  connection.rs  draw.rs  ekmf.rs  label.rs  lib.rs  tile.rs  track.rs  upgrade.rs
crates/n18token/: Cargo.toml
crates/n18token/src/: lib.rs
crates/n18ui/: Cargo.toml
crates/n18ui/src/: canvas.rs  control.rs  dialog.rs  keymap.rs  lib.rs  state.rs  util.rs
crates/n18ui/src/control/: _gtk.rs  _gtk3.rs
crates/n18ui/src/state/: default.rs  edit_tokens.rs  find_routes.rs  replace_tile.rs  search.rs  select_token.rs  start.rs
crates/navig18xx/: Cargo.toml
crates/navig18xx/src/: lib.rs  prelude.rs
crates/rusty_brush/: Cargo.toml
crates/rusty_brush/src/: lib.rs
crates/rusty_catalogue/: Cargo.toml
crates/rusty_catalogue/src/: lib.rs
crates/rusty_game/: Cargo.toml
crates/rusty_game/src/: _1867.rs  lib.rs
crates/rusty_hex/: Cargo.toml
crates/rusty_hex/src/: consts.rs  coord.rs  hex.rs  lib.rs
crates/rusty_io/: Cargo.toml
crates/rusty_io/src/: lib.rs
crates/rusty_map/: Cargo.toml
crates/rusty_map/src/: descr.rs  lib.rs  map.rs
crates/rusty_route/: Cargo.toml
crates/rusty_route/src/: bonus.rs  comb.rs  conflict.rs  lib.rs  path.rs  perm.rs  search.rs  train.rs
crates/rusty_tile/: Cargo.toml
crates/rusty_tile/src/: city.rs  connection.rs  draw.rs  label.rs  lib.rs  tile.rs  track.rs
crates/rusty_token/: Cargo.toml
crates/rusty_token/src/: lib.rs
crates/rusty_ui/: Cargo.toml
crates/rusty_ui/src/: dialog.rs  lib.rs  util.rs
crates/rusty_ui/src/state/: default.rs  edit_tokens.rs  replace_tile.rs  select_token.rs
dev_guide/: determinism.html  features.html  performance.html  routes.html  testing.html  tokens.html
examples/: 1867_bc.rs  draw_game.rs  draw_tiles.rs  draw_tokens.rs  example_routes.rs  offline_ui.rs  optimal_routes_1.rs  save_tiles.rs  tile_catalogue.rs  tile_x5.rs
examples/output/: .gitignore  1867_bc.game  1867_bc.map  1867_bc_C&O.json  1867_bc_CNR.json  1867_bc_CPR.json  1867_bc_D.json  1867_bc_GW.json  mod.rs  tile_1830.json  tile_1861.json  tile_1867.json  tile_1889.json  tile_catalogue.json
examples/util/: mod.rs
html/: 404.html  about.html  index.html  problem.html  searchindex.js
html/dev_guide/: crates.html  index.html  overview.html  performance.html  profiling.html  rusty_train.html
html/todo/: features.html  rust.html
html/user_guide/: default.html  index.html  modal.html  tile.html  tokens.html
src/: catalogue.rs  city.rs  connection.rs  de.rs  draw.rs  game.rs  games.rs  hex.rs  label.rs  lib.rs  main.rs  map.rs  prelude.rs  route.rs  tile.rs  track.rs  ui.rs
src/game/: _1867.rs
src/games/: _1867.rs
src/map/: descr.rs
src/route/: conflict.rs  doc.rs  search.rs  train.rs
src/ui/: dialog.rs  state.rs  util.rs
src/ui/state/: default.rs  edit_tokens.rs  replace_tile.rs  select_token.rs
tests/: 1861_ekat.rs  1861_upgrade_moscow.rs  1889_diesel_bonus.rs  connection_bonus.rs  route_finding.rs  track.rs
tests/output/: .gitignore
todo/: 001-IMPL-invalid-route-finding.md  002-IMPL-game-specific-route-finding.md  003-IMPL-catalogue-tiles-by-name.md  004-IMPL-connectivity-and-themes.md  005-FEAT-valid-tile-upgrades.md  006-IMPL-error-handling.md  007-IMPL-builder-pattern.md  008-IMPL-remove-n18io-crate.md  009-IMPL-single-index-for-token-spaces.md  010-DOCS-readme-md-for-each-crate.md  010-FEAT-decouple-ui-states-from-gui.md  011-DOCS-document-public-items.md  012-DOCS-architecture-diagram.md  013-DOCS-examples-of-crate-documentation.md  014-RUST-publish-to-crates-io.md  015-DOCS-hosting-on-docs-rs.md  016-IMPL-separate-comb-perm-crates.md  017-IMPL-off-board-locations.md  018-FEAT-undo-redo.md  019-FEAT-ui-state-keymaps.md  020-FEAT-port-to-gtk-4.md  021-RUST-versions.md  022-RUST-workspaces.md  023-RUST-documentation.md  024-RUST-testing.md  025-FEAT-18xx-maker-json-schema.md  026-FEAT-company-shares-and-dividends.md  027-MISC-n18io.md  028-MISC-n18map.md  029-MISC-n18route.md  030-MISC-n18tile.md  031-MISC-n18token.md  032-MISC-n18ui.md  033-MISC-test-cases.md  034-FEAT-ui-navigation.md  035-IMPL-export-items-in-crate-root.md  036-MISC-n18game.md  037-MISC-n18catalogue.md  DOCS.md  FEAT.md  (+9 more)
user_guide/: example.html  global.html  routes.html
