[package]
name = "rusty-train"
version = "0.1.0"
license = "MIT OR Apache-2.0"
authors = ["Rob Moss <robm.dev@gmail.com>"]
edition = "2018"
# Require Rust 1.38 for the 'duration_float' feature.
# See this tracking issue for specifying the minimum Rust version:
# https://github.com/rust-lang/rust/issues/65262
# rust = "1.38"
# Require Rust 1.48 for linking to items by name with rustdoc:
# https://doc.rust-lang.org/stable/rustdoc/linking-to-items-by-name.html
# Rust 1.48 also speeds up compile times, likely due to an async compilation
# regression being fixed (https://github.com/rust-lang/rust/pull/78410).
# Require Rust 1.51 for running all tests cases with `--include-ignored`,
# and using the "version 2" resolver to enable/disable features for all crates
# in the workspace.
default-run = "rusty_train"

[workspace]
members = ["crates/*", "."]
# The next line makes package-related cargo commands (build, doc, test, etc.)
# operate on all crates in the workspace, including rusty-train itself, so
# that there is no need to pass the "--workspace" argument each time.
default-members = ["crates/*", "."]

[dependencies]
n18game = { path = "./crates/n18game" }
n18ui = { path = "./crates/n18ui" }
navig18xx = { path = "./crates/navig18xx" }

# Include support for saving surfaces as PNG images.
cairo-rs = { version = "0.9", features = ["png", "pdf", "svg"] }
# Use features provided by GTK 3.20 (native file choosers).
gtk = { version = "0.9", features = ["v3_20"] }
# Use the minimum supported version of GIO (2.44).
gio = { version = "0.9", features = ["v2_44"] }
gdk = "0.13"
glib = "0.10"
chrono = "0.4"
log = "0.4"
env_logger = "0.7"

[dev-dependencies]
# NOTE: list additional dependencies required by any of the examples here.

[[example]]
name = "example_routes"
test = true

[[example]]
name = "optimal_routes_1"
test = true

[[example]]
name = "1867_bc"
test = true
