[package]
name = "rusty-train"
version = "0.1.0"
license = "MIT OR Apache-2.0"
authors = ["Rob Moss <robm.dev@gmail.com>"]
edition = "2018"
description = "A graphical user interface for constructing 18xx maps and identifying optimal train routes."
repository = "https://bitbucket.org/robmoss/navig18xx/"
readme = "README.md"
keywords = ["18xx", "optimisation", "optimization"]
categories = ["algorithms", "graphics"]
default-run = "rusty_train"

[workspace]
members = ["crates/*", "."]
# The next line makes package-related cargo commands (build, doc, test, etc.)
# operate on all crates in the workspace, including rusty-train itself, so
# that there is no need to pass the "--workspace" argument each time.
default-members = ["crates/*", "."]

[dependencies]
navig18xx = { path = "./crates/navig18xx" }
# Include support for saving surfaces as PNG images.
cairo-rs = { version = "0.14", features = ["png", "pdf", "svg"] }
# Use features provided by GTK 3.20 (native file choosers).
gtk = { version = "0.14", features = ["v3_20"] }
gdk = "0.14"
glib = "0.14"
chrono = "0.4"
log = "0.4"
env_logger = "0.7"

[dev-dependencies]
# NOTE: list additional dependencies required by any of the examples here.

[[example]]
name = "example_routes"
test = true

[[example]]
name = "optimal_routes_1"
test = true

[[example]]
name = "1867_bc"
test = true

[[example]]
name = "draw_tokens"
test = true

[[example]]
name = "draw_tiles"
test = true

[[example]]
name = "save_tiles"
test = true

[[example]]
name = "offline_ui"
test = true
