[package]
name = "n18brush"
version = "0.1.0"
license = "MIT OR Apache-2.0"
authors = ["Rob Moss <robm.dev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
n18hex = { path = "../n18hex" }
n18map = { path = "../n18map" }
n18route = { path = "../n18route" }
n18tile = { path = "../n18tile" }
n18token = { path = "../n18token" }
# Include support for saving surfaces as PNG images.
cairo-rs = { version = "0.9", features = ["png", "pdf", "svg"] }
