[package]
name = "n18catalogue"
version = "0.1.0"
license = "MIT OR Apache-2.0"
authors = ["Rob Moss <robm.dev@gmail.com>"]
edition = "2024"
description = "Defines common 18xx tiles."
repository = "https://github.com/robmoss/rusty_train"
keywords = ["18xx", "optimisation", "optimization"]
categories = ["algorithms", "graphics"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
n18hex = { path = "../n18hex", version = "0.1.0" }
n18tile = { path = "../n18tile", version = "0.1.0" }
