[package]
name = "n18example"
version = "0.1.0"
license = "MIT OR Apache-2.0"
authors = ["Rob Moss <robm.dev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
n18hex = { path = "../n18hex" }
n18token = { path = "../n18token" }
n18tile = { path = "../n18tile" }
n18catalogue = { path = "../n18catalogue" }
n18map = { path = "../n18map" }
n18route = { path = "../n18route" }
n18game = { path = "../n18game" }
n18brush = { path = "../n18brush" }

# Include support for saving surfaces as PNG images.
cairo-rs = { version = "0.14", features = ["png", "pdf", "svg"] }
