[package]
name = "n18hex"
version = "0.1.0"
license = "MIT OR Apache-2.0"
authors = ["Rob Moss <robm.dev@gmail.com>"]
edition = "2021"
description = "Defines the geometry of hexagonal tiles for 18xx."
repository = "https://github.com/robmoss/rusty_train"
keywords = ["18xx", "optimisation", "optimization"]
categories = ["algorithms", "graphics"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Include support for saving surfaces as PNG images.
cairo-rs = { version = "0.17", features = ["png", "pdf", "svg"] }
pango = "0.17"
pangocairo = "0.17"
