[package]
name = "n18io"
version = "0.1.0"
license = "MIT OR Apache-2.0"
authors = ["Rob Moss <robm.dev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
n18hex = { path = "../n18hex" }
n18tile = { path = "../n18tile" }
n18token = { path = "../n18token" }
n18map = { path = "../n18map" }
n18catalogue = { path = "../n18catalogue" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
