[package]
name = "n18route"
version = "0.1.0"
license = "MIT OR Apache-2.0"
authors = ["Rob Moss <robm.dev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
n18hex = { path = "../n18hex" }
n18tile = { path = "../n18tile" }
n18token = { path = "../n18token" }
n18map = { path = "../n18map" }
log = "0.4"

[dev-dependencies]
n18catalogue = { path = "../n18catalogue" }
env_logger = "0.7"
