[package]
name = "n18route"
version = "0.1.0"
license = "MIT OR Apache-2.0"
authors = ["Rob Moss <robm.dev@gmail.com>"]
edition = "2021"
description = "Searches 18xx maps for optimal route combinations."
repository = "https://github.com/robmoss/rusty_train"
keywords = ["18xx", "optimisation", "optimization"]
categories = ["algorithms", "graphics"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
n18hex = { path = "../n18hex", version = "0.1.0" }
n18tile = { path = "../n18tile", version = "0.1.0" }
n18token = { path = "../n18token", version = "0.1.0" }
n18map = { path = "../n18map", version = "0.1.0" }
log = "0.4"
rayon = "1.7"

[dev-dependencies]
n18catalogue = { path = "../n18catalogue", version = "0.1.0" }
n18brush = { path = "../n18brush", version = "0.1.0" }
cairo-rs = { version = "0.19" }
env_logger = "0.10"
