[package]
name = "n18tile"
version = "0.1.0"
license = "MIT OR Apache-2.0"
authors = ["Rob Moss <robm.dev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
n18hex = { path = "../n18hex" }
# Include support for saving surfaces as PNG images.
cairo-rs = { version = "0.14", features = ["png", "pdf", "svg"] }

[[example]]
name = "custom_tile"
test = true
