[package]
name = "n18token"
version = "0.1.0"
license = "MIT OR Apache-2.0"
authors = ["Rob Moss <robm.dev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
n18hex = { path = "../n18hex" }
# Include support for saving surfaces as PNG images.
cairo-rs = { version = "0.9", features = ["png", "pdf", "svg"] }
# Use the minimum supported version of Pango (1.38).
pango = { version = "0.9", features = ["v1_38"] }
pangocairo = "0.10"