[package]
name = "n18ui"
version = "0.1.0"
license = "MIT OR Apache-2.0"
authors = ["Rob Moss <robm.dev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
n18hex = { path = "../n18hex" }
n18tile = { path = "../n18tile" }
n18token = { path = "../n18token" }
n18map = { path = "../n18map" }
n18io = { path = "../n18io" }
n18route = { path = "../n18route" }
n18game = { path = "../n18game" }
n18brush = { path = "../n18brush" }

# Include support for saving surfaces as PNG images.
cairo-rs = { version = "0.9", features = ["png", "pdf", "svg"] }

# Use the minimum supported version of GTK (3.16).
gtk = { version = "0.9", features = ["v3_16"] }

# Use the minimum supported version of GIO (2.44).
gio = { version = "0.9", features = ["v2_44"] }

gdk = "0.13"
glib = "0.10"
chrono = "0.4"
log = "0.4"
