[package]
name = "n18ui"
version = "0.1.0"
license = "MIT OR Apache-2.0"
authors = ["Rob Moss <robm.dev@gmail.com>"]
edition = "2018"
description = "GUI for constructing 18xx maps and finding optimal routes."
repository = "https://github.com/robmoss/rusty_train"
keywords = ["18xx", "optimisation", "optimization"]
categories = ["algorithms", "graphics"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
n18hex = { path = "../n18hex", version = "0.1.0" }
n18tile = { path = "../n18tile", version = "0.1.0" }
n18token = { path = "../n18token", version = "0.1.0" }
n18map = { path = "../n18map", version = "0.1.0" }
n18io = { path = "../n18io", version = "0.1.0" }
n18route = { path = "../n18route", version = "0.1.0" }
n18game = { path = "../n18game", version = "0.1.0" }
n18brush = { path = "../n18brush", version = "0.1.0" }

# Include support for saving surfaces as PNG images.
cairo-rs = { version = "0.14", features = ["png", "pdf", "svg"] }
# Use features provided by GTK 3.20 (native file choosers).
gtk = { version = "0.14", features = ["v3_20"] }
gdk = "0.14"
glib = "0.14"
chrono = "0.4"
log = "0.4"
