[package]
name = "navig18xx"
version = "0.1.0"
license = "MIT OR Apache-2.0"
authors = ["Rob Moss <robm.dev@gmail.com>"]
edition = "2021"
description = "Construct 18xx tiles and maps, and find optimal route combinations."
repository = "https://github.com/robmoss/rusty_train"
keywords = ["18xx", "optimisation", "optimization"]
categories = ["algorithms", "graphics"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
n18hex = { path = "../n18hex", version = "0.1.0" }
n18tile = { path = "../n18tile", version = "0.1.0" }
n18token = { path = "../n18token", version = "0.1.0" }
n18catalogue = { path = "../n18catalogue", version = "0.1.0" }
n18map = { path = "../n18map", version = "0.1.0" }
n18io = { path = "../n18io", version = "0.1.0" }
n18route = { path = "../n18route", version = "0.1.0" }
n18game = { path = "../n18game", version = "0.1.0" }
n18brush = { path = "../n18brush", version = "0.1.0" }
n18ui = { path = "../n18ui", version = "0.1.0", optional = true }
n18example = { path = "../n18example", version = "0.1.0" }

[features]
default = ["ui"]
ui = ["n18ui"]
