[package]
name = "rusty_brush"
version = "0.1.0"
license = "MIT OR Apache-2.0"
authors = ["Rob Moss <robm.dev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusty_hex = { path = "../rusty_hex" }
rusty_map = { path = "../rusty_map" }
rusty_route = { path = "../rusty_route" }
rusty_tile = { path = "../rusty_tile" }
# Include support for saving surfaces as PNG images.
cairo-rs = { version = "0.8", features = ["png", "pdf", "svg"] }
