[package]
name = "rusty_io"
version = "0.1.0"
license = "MIT OR Apache-2.0"
authors = ["Rob Moss <robm.dev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusty_hex = { path = "../rusty_hex" }
rusty_tile = { path = "../rusty_tile" }
rusty_map = { path = "../rusty_map" }
rusty_catalogue = { path = "../rusty_catalogue" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
